# fastapi-aws

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.local.yml  nginx.conf
.github/workflows/: deploy.yml  lint.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2025_07_25_0114-a695a267d572_create_users_tables.py
backend/scripts/: fetch_env.py
backend/src/: api.py
backend/src/core/config/: __init__.py  base.py  dev.py  local.py
backend/src/db/: session.py
backend/src/db/models/: __init__.py  base.py  user.py
backend/src/db/repositories/: __init__.py  users.py
backend/src/routes/: __init__.py  auth.py  tests.py  users.py
backend/src/schemas/: auth.py  user.py
backend/src/services/: auth.py  jwt_service.py  web3_auth.py
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
